# PlanLibre

./: Changelog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  planlibre.desktop
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
docs/: Makefile.am  export_tasks.ods  manuel.odt  planlibre_manual_en.odt  project_break-in-paradise_sewers-1976.odt  project_break-in-paradise_sewers-1976.plibre  project_house_building.plibre  project_house_construction_intermediate.odt  project_tatin_pie_english.odt  ressources_export_model.ods  synchro_trello.odt  tasks_export_model.csv  tatin_pie.plibre
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  creation_pot  fr.gmo  fr.po  planlibre.pot  planlibre0.pot
src/: Makefile  Makefile.am  Makefile.am.old  Makefile.in  assign.c  assign.h  calendars.c  calendars.h  callbacks.c  callbacks.h  cursor.c  cursor.h  dashboard.c  dashboard.h  export.c  export.h  files.c  files.h  home.c  home.h  import.c  import.h  interface.c  interface.h  links.c  links.h  mail.c  mail.h  main.c  misc.c  misc.h  msproject.c  msproject.h  planlibre-glade.pot  planlibre.pot  planlibre1.pot  planlibre1.pot.pot  planlibre2.pot  properties.c  properties.h  (+26 more)
src/.deps/: assign.Po  calendars.Po  callbacks.Po  cursor.Po  dashboard.Po  export.Po  files.Po  home.Po  import.Po  interface.Po  links.Po  mail.Po  main.Po  misc (2).Po  misc.Po  paving.Po  properties (2).Po  properties.Po  report.Po  ressources (2).Po  ressources.Po  savestate.Po  search.Po  secret.Po  settings.Po  support.Po  tasks.Po  tasksdialogs.Po  tasksutils.Po  timeline.Po  trello.Po  undoredo.Po
ui/: Makefile  Makefile.am  Makefile.in  calendars.ui  freemail.ui  group.ui  main.ui  main_ribbon.ui  milestone.ui  password.ui  properties.ui  reportmail.ui  ressources.ui  settings.ui  shortkeys.ui  taskrepeat.ui  tasks.ui  timeshift.ui  usertoken.ui
